2005-01-09  Guilhem Lavaux  <guilhem@kaffe.org>

	* Makefile.am
	(BUILD_ENVIRONMENT): Add classpath to (DY)LD_LIBRARY_PATH.

	* libraries/javalib/Makefile.am.in: Do not build LD_LIBRARY_PATH.

	* Makefile.in, libraries/javalib/Makefile.am,
	libraries/javalib/Makefile.in: Regenerated.

	* libraries/javalib/bootstrap.classlist: Added java.util.Currency.

	* libraries/javalib/Klasses.jar.bootstrap: Regenerated.

2005-01-09  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/beans/GenericBeanInfo.java:
	Removed. No loger necessary.
	
2005-01-09  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/lang/Process.java:
	Replaced by implementation from GNU Classpath.
	
2005-01-09  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/lang/Package.java:
	Replaced by implementation from GNU Classpath.
	
2005-01-09  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/lang/reflect/Proxy.java:
	Resynced with GNU Classpath.

	2004-10-15  Michael Koch  <konqueror@gmx.de>

	* java/lang/reflect/Proxy.java: Improved javadocs.
	
	2004-10-15  Michael Koch  <konqueror@gmx.de>
	
	* java/lang/reflect/Proxy.java:
	Reworked import statements.
	
	2004-10-11  Jeroen Frijters  <jeroen@frijters.net>
	
	* java/lang/reflect/Proxy.java
        (count): Removed useless initializer.
	
	2004-07-10  Jeroen Frijters  <jeroen@frijters.net>

        * java/lang/reflect/Proxy.java (getPackage, ClassFactory): Fixed
        handling of default package. (generate): Removed confused comments
        and code about making Method and Field accessible.
	
2005-01-09  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/lang/String.java
	(valueOf): Replaced by implementation from GNU Classpath.

	* libraries/javalib/java/lang/Boolean.java,
	libraries/javalib/java/lang/Byte.java,
	libraries/javalib/java/lang/Character.java,
	libraries/javalib/java/lang/Integer.java,
	libraries/javalib/java/lang/Long.java,
	libraries/javalib/java/lang/Short.java: